--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <header>
       <div class="menu section">
         <div class="logo">
-          <img src="./logo.svg" alt="" />
+          <img src="./img/logo 1.png" alt="" />
         </div>
         <nav>
           <ul class="nav">
@@ -41,26 +41,26 @@
       <h2 class="skills">Skills</h2>
       <div class="skills-items">
         <div class="skills-item">
-          <img class="skills-img" src="./camera 1.png" alt="" />
+          <img class="skills-img" src="./img/camera 1.png" alt="" />
           <h3 class="skills-name">Digital photography</h3>
           <p class="skill-text">
             High-quality photos in the studio and on the nature
           </p>
         </div>
         <div class="skills-item">
-          <img class="skills-img" src="./video 1.png" alt="" />
+          <img class="skills-img" src="./img/video 1.png" alt="" />
           <h3 class="skills-name">Video shooting</h3>
           <p class="skill-text">
             Capture your moments so that they always stay with you
           </p>
         </div>
         <div class="skills-item">
-          <img class="skills-img" src="./image 1.png" alt="" />
+          <img class="skills-img" src="./img/image 1.png" alt="" />
           <h3 class="skills-name">Retouch</h3>
           <p class="skill-text">I strive to make photography surpass reality</p>
         </div>
         <div class="skills-item">
-          <img class="skills-img" src="./mic 1.png" alt="" />
+          <img class="skills-img" src="./img/mic 1.png" alt="" />
           <h3 class="skills-name">Audio</h3>
           <p class="skill-text">
             Professional sounds recording for video, advertising, portfolio
@@ -78,22 +78,91 @@
       </div>
 
       <div class="portfolio-items">
-        <img src="./portfolio-img1.png" alt="" />
-        <img src="./portfolio-img2.png" alt="" />
-        <img src="./portfolio-img3.png" alt="" />
-        <img src="./portfolio-img4.png" alt="" />
-        <img src="./portfolio-img5.png" alt="" />
-        <img src="./portfolio-img6.png" alt="" />
+        <img src="./img/portfolio-img1.png" alt="" />
+        <img src="./img/portfolio-img2.png" alt="" />
+        <img src="./img/portfolio-img3.png" alt="" />
+        <img src="./img/portfolio-img4.png" alt="" />
+        <img src="./img/portfolio-img5.png" alt="" />
+        <img src="./img/portfolio-img6.png" alt="" />
       </div>
     </section>
     <section class="section">
       <h2 class="video">Video</h2>
       <div class="video-player">
-        <img src="./Play_hover.png" alt="" />
+        <img src="./img/Play_hover.png" alt="" />
       </div>
     </section>
     <section class="section">
       <h2 class="price">Price</h2>
+      <div class="price-items">
+        <div class="price-item">
+          <p class="tariff">Standart</p>
+          <p class="money">500&#36</p>
+          <p class="price-text">
+            One location<br />
+            120 photo in color<br />
+            12 photos in retouch<br />
+            Readiness 2-3 weeks<br />
+            Make up, visage
+          </p>
+          <button class="order">Order shooting</button>
+        </div>
+        <div class="price-item">
+          <p class="tariff">Premium</p>
+          <p class="money">700&#36</p>
+          <p class="price-text">
+            One or two locations<br />
+            200 photos in color<br />
+            20 photos in retouch<br />
+            Readiness 1-2 weeks<br />
+            Make up, visage
+          </p>
+          <button class="order">Order shooting</button>
+        </div>
+        <div class="price-item">
+          <p class="tariff">Gold</p>
+          <p class="money">1000&#36</p>
+          <p class="price-text">
+            Three locations or more<br />
+            300 photos in color<br />
+            50 photos in retouch<br />
+            Readiness 1 week<br />
+            Make up, visage, hairstyle
+          </p>
+          <button class="order">Order shooting</button>
+        </div>
+      </div>
     </section>
+    <section class="contacts section">
+        <div class="contacts-container">
+          <h2 class="contacts-title">Contact me</h2>
+          <div class="mail">
+            <p class="text-contact">E-mail</p>
+          </div>
+          <div class="phone">
+            <p class="text-contact">Phone</p>
+          </div>
+          <div class="message">
+            <p class="text-contact">Message</p>
+          </div>
+          <button class="btn-message">Send message</button>
+        </div>
+    </section>
+    <footer class="footer section">
+      <address class="footer-data">
+        <p>&#169;</p>
+        <p>2023</p>
+        <p>github</p>
+      </address>
+      <div class="school">
+        <p class="text-school">Rolling Scopes School</p>
+      </div>
+      <div class="social-list">
+        <img class="img-footer" src="./img/inst1.svg" alt="" />
+        <img class="img-footer" src="./img/fb1.svg" alt="" />
+        <img class="img-footer" src="./img/tw1.svg" alt="" />
+        <img class="img-footer" src="./img/pinterest1.svg" alt="" />
+      </div>
+    </footer>
   </body>
 </html>
